# AdaptativeRanSaCBenchmark

./: .gitignore
Scripts/: README.md
Scripts/src/: CMakeLists.txt
Scripts/src/data_analyse_python/: Experiment_Analysis.ipynb  IPOL_LRT_likelihood.ipynb  IPOL_LRT_precision_recall.ipynb  IPOL_LRT_time_options.ipynb  README.md  RS_benchmark_loader.py  analyse_magsac.ipynb  analyse_results.ipynb  analyse_utils.py  data_loader.py  experiment_full_analysis.ipynb  magsac_data.py  magsac_utils.py  prepare_pnpdatasets.py  requirements.txt  single_data_loader.py  test_error_distrib.ipynb  with_new_algo.ipynb
Scripts/src/demo/: CMakeLists.txt  demo.cpp  demo_PNP.cpp  put_epipolar.cpp  read_and_save_homography.cpp  show_epi.cpp
Scripts/src/experiments/: CMakeLists.txt  README.md  apply_transform.cpp  apply_transform.hpp  evaluate_artificial.cpp  general_experiment.cpp  generate_artificial_dataset.cpp  lrt_experiment.cpp  new_algo_experiment.cpp  outlier_gen_distrib.cpp  outlier_gen_distrib_pnp.cpp  pnp_experiment.cpp  pnp_generate_artificial_dataset.cpp  read_write_experiment.cpp  read_write_experiment.hpp  residual_distrib.cpp  residual_distrib_pnp.cpp  run_evaluate_artificial.sh  run_general_experiment.sh  run_lrt_experiment.sh  run_manuscript_exp.txt  run_new_algo_experiment.sh  run_pnp_experiment.sh  run_time_experiment.sh  time_experiment.cpp
Scripts/src/libOrsa/: CMakeLists.txt  e5p.cpp  e5p.h  essential_model.cpp  essential_model.hpp  fundamental_model.cpp  fundamental_model.hpp  fundamental_model_test.cpp  gamma_values.cpp  homography_model.cpp  homography_model.hpp  line_model.hpp  lrtsac.cpp  lrtsac.hpp  magsac.cpp  magsac.hpp  magsac_metrics.cpp  magsac_metrics.hpp  match.hpp  match2d3d.hpp  model_estimator.cpp  model_estimator.hpp  muse.cpp  muse.hpp  muse_lookup.cpp  muse_lookup.hpp  orsa.cpp  orsa.hpp  orsa_fast.cpp  orsa_fast.hpp  pnp_model.cpp  pnp_model.hpp  pnp_poly.cpp  pnp_poly.hpp  ransac.cpp  ransac.hpp  starsac.cpp  starsac.hpp
Scripts/src/libOrsa/libNumerics/: matrix.cpp  matrix.h  numerics.cpp  numerics.h
Scripts/src/utilities/: CMakeLists.txt  Rect.cpp  Rect.hpp  artificial_output.cpp  artificial_output.hpp  cmdLine.h  data_handler.hpp  fundamental_graphical_output.cpp  fundamental_graphical_output.hpp  graphical_output.cpp  graphical_output.hpp  histogram.hpp  homography_graphical_output.cpp  homography_graphical_output.hpp  metrics.cpp  metrics.hpp  siftMatch.cpp  siftMatch.hpp  usac_file_handler.cpp  usac_file_handler.hpp  visualise_data.py  warping.cpp  warping.hpp
